force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__CalculatedRiskScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalculatedRiskScoreNumber__c</fullName>
    <label>Calculated Risk Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalculatedRiskScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>