force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ChangeRequestImpact__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestImpact__c</fullName>
    <label>Change Request Impact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestImpact</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>