force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ChangeRequestPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestPriority__c</fullName>
    <label>Change Request Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>