force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ChangeRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestStatus__c</fullName>
    <label>Change Request Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>