force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ChangeRequestType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestType__c</fullName>
    <label>Change Request Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>