force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ChangeRequestUrgency__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestUrgency__c</fullName>
    <label>Change Request Urgency</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestUrgency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>