force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ClosedStatusCommentText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClosedStatusCommentText__c</fullName>
    <label>Closed Status Comments</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClosedStatusCommentText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>