force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__EntitlementProcessEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EntitlementProcessEndDateTime__c</fullName>
    <label>Entitlement Process End Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EntitlementProcessEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>