force-app/main/default/objects/ssot__ChangeRequest__dlm/fields/ssot__ServiceEntitlementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceEntitlementId__c</fullName>
    <label>Service Entitlement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceEntitlementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>